# mkdocs-branchcustomization-plugin

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
mkdocs_branchcustomization_plugin/: _version.py  plugin.py
