[metadata]
url = https://github.com/effigies/mkdocs-branchcustomization-plugin
author = Christopher J. Markiewicz
author_email = markiewicz@stanford.edu
maintainer = Christopher J. Markiewicz
maintainer_email = markiewicz@stanford.edu
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = MIT License
description = Update mkdocs configuration based on the git branch
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
platforms = OS Independent
provides =
    mkdocs_branchcustomization_plugin

[options]
python_requires = >=3.6
install_requires =
    mkdocs
    gitpython
packages = find:

[options.entry_points]
mkdocs.plugins =
    branchcustomization = mkdocs_branchcustomization_plugin.plugin:BranchPlugin

[versioneer]
VCS = git
style = pep440
versionfile_source = mkdocs_branchcustomization_plugin/_version.py
versionfile_build = mkdocs_branchcustomization_plugin/_version.py
tag_prefix =
parentdir_prefix =
